--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
 <meta charset="UTF-8" />
-<meta name="description"content="web studio site"/>
+<meta name="description" content="web studio site"/>
 <title>бизнес решения</title>
     </head>
 <body>
@@ -24,10 +24,8 @@
     </header>
     <div>
         <section>
-            <p>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-            </p>
-            <button type="button">Заказать услугу</button>
+                        <h1>Эффективные решения для вашего бизнеса</h1>
+                    <button type="button">Заказать услугу</button>
         </section>
     </div>
 <section>
@@ -54,32 +52,32 @@
     <h2>Чем мы занимаемся</h2>
     <ul>
     <li>
-        <img src="./images/img.jpg" alt="coding" width="370" height="294"/>
+        <img src="./images/coding.jpg" alt="coding" width="370" height="294"/>
     </li>
-    <li><img src="./images/img (1).jpg" alt="deviceadaptation" width="370" height="294"></li>
-    <li><img src="./images/img (2).jpg" alt="graphics" width="370" height="294"></li>
+    <li><img src="./images/mobileadptation.jpg" alt="deviceadaptation" width="370" height="294"></li>
+    <li><img src="./images/graphics.jpg" alt="graphics" width="370" height="294"></li>
 </ul>
 </article>
 <section>
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="./images/Игорь Демьяненко.jpg" alt="igordemyanenkophotos" width="270">
+            <img src="./images/igor_demyanenko.jpg" alt="igordemyanenkophotos" width="270">
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/Ольга Репина.jpg" alt="olgarepinaphoto" width="270">
+            <img src="./images/olgarepina.jpg" alt="olgarepinaphoto" width="270">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/Николай Тарасов.jpg" alt="nikolaytarasovphoto" width="270">
+            <img src="./images/nikolaytarasov.jpg" alt="nikolaytarasovphoto" width="270">
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/Михаил Ермаков.jpg" alt="mikhailermakovphoto" width="270">
+            <img src="./images/Mikhail_ermakov.jpg" alt="mikhailermakovphoto" width="270">
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
