--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
 <body>
     <header>
+        <main>
     <nav>
     <a href=/>webstudio</a>
     <ul>
@@ -22,33 +23,31 @@
         <li><a href="">+38 096 111 11 11</a></li>
     </ul>
     </header>
-    <div>
-        <section>
+            <section>
                         <h1>Эффективные решения для вашего бизнеса</h1>
                     <button type="button">Заказать услугу</button>
         </section>
-    </div>
-<section>
+    <section>
     <ul>
         <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
     </ul>
 </section>
-<article>
+<section>
     <h2>Чем мы занимаемся</h2>
     <ul>
     <li>
@@ -57,7 +56,7 @@
     <li><img src="./images/mobileadptation.jpg" alt="deviceadaptation" width="370" height="294"></li>
     <li><img src="./images/graphics.jpg" alt="graphics" width="370" height="294"></li>
 </ul>
-</article>
+</section>
 <section>
     <h2>Наша команда</h2>
     <ul>
@@ -84,12 +83,14 @@
     </ul>
 
 </section>
+</main>
 <footer>
    <a href= />webstudio</a>
 <address>
-г. Киев, пр-т Леси Украинки, 26 <br>
+    <p>
+г. Киев, пр-т Леси Украинки, 26 </p><br>
 <a href="info@devstudio.com">info@devstudio.com"</a> <br>
-+38 099 111 11 11
+<a href="">+38 096 111 11 11</a>
     </address>
 </footer>
 </body>
